--- a/springcloud-provider-payment/pom.xml
+++ b/springcloud-provider-payment/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>springcloud-provider-payment</artifactId>
 
     <dependencies>
+        <!--eureka-client-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
         <!-- 引入自己定义的api通用包，可以使用Payment支付Entity -->
         <dependency>
             <groupId>com.geekshow.springcloud</groupId>
