zookeeper注册与发现

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>springcloud-provider-payment2</module>
         <module>springcloud-provider-payment4</module>
         <module>springcloud-consumer-order</module>
+        <module>springcloud-consumer-order-zk</module>
         <module>springcloud-api-commons</module>
         <module>springcloud-eureka-server</module>
         <module>springcloud-eureka-server2</module>
