consul注册与发现

--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,10 @@
         <module>springcloud-provider-payment</module>
         <module>springcloud-provider-payment2</module>
         <module>springcloud-provider-payment4</module>
+        <module>springcloud-provider-payment6</module>
         <module>springcloud-consumer-order</module>
         <module>springcloud-consumer-order-zk</module>
+        <module>springcloud-consumer-order-consul</module>
         <module>springcloud-api-commons</module>
         <module>springcloud-eureka-server</module>
         <module>springcloud-eureka-server2</module>
