--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>springcloud-consumer-order-zk</module>
         <module>springcloud-consumer-order-consul</module>
         <module>springcloud-consumer-order-ribbon</module>
+        <module>springcloud-consumer-order-feign</module>
         <module>springcloud-api-commons</module>
         <module>springcloud-eureka-server</module>
         <module>springcloud-eureka-server2</module>
