springcloud-gateway网关配置路由的两种方式

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>springcloud-api-commons</module>
         <module>springcloud-eureka-server</module>
         <module>springcloud-eureka-server2</module>
+        <module>springcloud-gateway</module>
     </modules>
     <dependencies>
         <dependency>
