--- a/springcloud-gateway/src/main/resources/application.yml
+++ b/springcloud-gateway/src/main/resources/application.yml
@@ -16,6 +16,9 @@ spring:
           uri: lb://springcloud-provider-payment #匹配后提供服务的路由地址
           predicates:
             - Path=/payment/get/**         # 断言，路径相匹配的进行路由
+#            - After=2020-05-21T08:09:55.049+08:00[Asia/Shanghai]
+#            - Cookie=username,geekshow
+#            - Header=X-Request-Id, \d+
 
         - id: payment_routh2 #payment_route    #路由的ID，没有固定规则但要求唯一，建议配合服务名
           #uri: http://localhost:8001          #匹配后提供服务的路由地址
