springcloud-bus消息总线动态刷新全局广播、定点通知

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>springcloud-gateway</module>
         <module>springcloud-geekshow-config</module>
         <module>springcloud-geekshow-config-client</module>
+        <module>springcloud-geekshow-config-client2</module>
     </modules>
     <dependencies>
         <dependency>
