--- a/springcloud-consumer-order/src/main/resources/application.yml
+++ b/springcloud-consumer-order/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: springcloud-consumer-order
+  zipkin:
+    base-url: http://localhost:9411
+    sleuth:
+      sampler:
+        probability: 1
 eureka:
   client:
     #表示是否将自己注册进EurekaServer默认为true。
