--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,9 @@
         <module>springcloud-stream-rabbitmq-provider</module>
         <module>springcloud-stream-rabbitmq-consumer</module>
         <module>springcloud-stream-rabbitmq-consumer2</module>
+        <module>springcloud-alibaba-provider-payment</module>
+        <module>springcloud-alibaba-provider-payment2</module>
+        <module>springcloud-alibaba-consumer-order</module>
     </modules>
     <dependencies>
         <dependency>
@@ -47,7 +50,7 @@
         <junit.version>4.12</junit.version>
         <log4j.version>1.2.17</log4j.version>
         <lombok.version>1.16.18</lombok.version>
-<!--        <mysql.version>5.1.47</mysql.version>-->
+        <!--        <mysql.version>5.1.47</mysql.version>-->
         <mysql.version>8.0.11</mysql.version>
         <druid.version>1.1.16</druid.version>
         <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
@@ -118,6 +121,15 @@
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
                 <optional>true</optional>
+            </dependency>
+
+            <!--spring cloud alibaba 2.1.0.RELEASE-->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>2.1.0.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
