--- a/springcloud-alibaba-config-client/src/main/resources/bootstrap.yml
+++ b/springcloud-alibaba-config-client/src/main/resources/bootstrap.yml
@@ -11,5 +11,8 @@ spring:
       config:
         server-addr: localhost:8848 #配置中心地址
         file-extension: yaml #指定yaml格式的配置
-
+#        group: TEST_GROUP
+        group: DEV_GROUP
+        namespace: 2e15918c-1188-43b9-92dc-65313f8b798f #namespace-dev
+#        namespace: 2cb49939-ff9f-426b-9c3a-8b6cfe8a4bb0 #namespace-test
 
